Fix Java PersonalDataManagerTest flake.

Initialization of the PersonalDataManager fires off a
PersonalDataChanged event. If a test is also changing autofill data and
listening for this event, then it may receive the event notification
from initialization instead of the event from its own action. This makes
the test flaky. This patch changes AutofillTestHelper to wait for the
initialization event before starting the test.

BUG=639138

Review-Url: https://codereview.chromium.org/2296943002
Cr-Commit-Position: refs/heads/master@{#416298}

Former-commit-id: 33b61506dfd38f489950612a88451ab680bfe431